# pet_triangulation

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  convert_ENU_to_WGS84.txt  convert_coordinate.txt  convert_polar.txt  example.cpp  input coordinate.txt  input_coordinate.txt  output distance.txt  output_distance_rand.txt  output_distance_true.txt  triangulation.cpp
Libs/: base_coordinate.cpp  base_coordinate.h  coordinate.cpp  coordinate.h  polar_coordinate.cpp  polar_coordinate.h
Libs/armadillo_libs/: libarmadillo.so.9.400.3
